feat(searchHistory): implement searchHistory api
