# src/modules/search/dto/searchHistory.dto.ts
@@ -1,0 +1,110 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { Types } from 'mongoose';
+import { IsOptional, IsString, IsMongoId, IsNumber, IsBoolean, IsArray } from 'class-validator';
+
+export class CreateSearchHistoryDto {
+	@ApiProperty({ type: String, required: false, description: 'Text hoặc hashtag mà user nhập' })
+	@IsOptional()
+	@IsString()
+	text?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'Hashtag mà user nhập' })
+	@IsOptional()
+	@IsString()
+	hashtag?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'User ID được tìm kiếm' })
+	@IsOptional()
+	@IsMongoId()
+	user?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'Group ID được tìm kiếm' })
+	@IsOptional()
+	@IsMongoId()
+	group?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'Event ID được tìm kiếm' })
+	@IsOptional()
+	@IsMongoId()
+	event?: string;
+}
+
+// Internal DTO for repository operations
+export class CreateSearchHistoryInternalDto {
+	@IsOptional()
+	@IsString()
+	text?: string;
+
+	@IsOptional()
+	@IsString()
+	hashtag?: string;
+
+	@IsOptional()
+	user?: Types.ObjectId;
+
+	@IsOptional()
+	group?: Types.ObjectId;
+
+	@IsOptional()
+	event?: Types.ObjectId;
+}
+
+export class SearchHistoryResultDto {
+	@ApiProperty({ type: String })
+	userId: string;
+
+	@ApiProperty({ type: String, required: false, description: 'Text hoặc hashtag mà user nhập' })
+	@IsOptional()
+	@IsString()
+	text?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'Hashtag mà user nhập' })
+	@IsOptional()
+	@IsString()
+	hashtag?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'User ID được tìm kiếm' })
+	@IsOptional()
+	@IsString()
+	user?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'Group ID được tìm kiếm' })
+	@IsOptional()
+	@IsString()
+	group?: string;
+
+	@ApiProperty({ type: String, required: false, description: 'Event ID được tìm kiếm' })
+	@IsOptional()
+	@IsString()
+	event?: string;
+
+	@ApiProperty({ type: String, description: 'Thời gian tạo' })
+	@IsString()
+	createdAt: string;
+}
+
+export class PaginatedSearchHistoryResultDto {
+	@ApiProperty({ type: [SearchHistoryResultDto] })
+	@IsArray()
+	data: SearchHistoryResultDto[];
+
+	@ApiProperty()
+	@IsNumber()
+	page: number;
+
+	@ApiProperty()
+	@IsNumber()
+	limit: number;
+
+	@ApiProperty()
+	@IsNumber()
+	totalPages: number;
+
+	@ApiProperty()
+	@IsBoolean()
+	hasNextPage: boolean;
+
+	@ApiProperty()
+	@IsBoolean()
+	hasPrevPage: boolean;
+}
